--- a/src/main/resources/templates/SignPage.html
+++ b/src/main/resources/templates/SignPage.html
@@ -359,7 +359,7 @@
                 var pw = $('#pw').val();
                 var ceo = $('#ceo').val();
                 var email = $('#mailhead').val() + '@' +$('#selectmailTail option:selected').val();
-                var phone = $("#telecom option:selected").val() + $('#mid').val() + $('#tail').val();
+                var phone = $("#telecom option:selected").val() + '-' + $('#mid').val() + '-'+ $('#tail').val();
                 var regnum = $('#regnum').val();
                 var address = $('#sample6_address').val() + $('#sample6_extraAddress').val() + $('#sample6_detailAddress').val();
                 var html = "";
