서비스 소개 페이지 완성

--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -156,7 +156,13 @@
   <br>
   <br>
   <br>
-
+  <table id = "table" border="0" cellpadding="1" cellspacing="1" width="1024px" align=center>
+    <tr>
+      <td align="right">
+        <strong>데이터 : 2021년 8월 29일 기준</strong>
+      </td>
+    </tr>
+  </table>
   <!-- main -->
   <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
     <tbody>
