--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,6 +7,7 @@
             </a>
         </td>
         <td align="right">
+            <a href="/servicePage"><img src="https://i.ibb.co/BZjxTNt/image.png" alt="" height="17%" width="17%"></a>
             <a href="/listPage"><img src="https://i.ibb.co/4MZLzwb/Search-button.png" onmouseover="this.src='https://i.ibb.co/8rfcfpq/Search-button.png'" onmouseout="this.src='https://i.ibb.co/4MZLzwb/Search-button.png'"></a>
             <a href="/SearchPage"><img src="https://i.ibb.co/7GwrDPf/Recommendation-button.png" onmouseover="this.src='https://i.ibb.co/zbsBBWf/Recommendation-button.png'" onmouseout="this.src='https://i.ibb.co/7GwrDPf/Recommendation-button.png'"></a>
             <a href="/myPage" align = right><img src="https://i.ibb.co/Sd9b5wJ/Mypage-button.png" onmouseover="this.src='https://i.ibb.co/5TFsZ4m/Mypage-button.png'" onmouseout="this.src='https://i.ibb.co/Sd9b5wJ/Mypage-button.png'"></a>
