--- a/src/main/resources/templates/RecommendPage.html
+++ b/src/main/resources/templates/RecommendPage.html
@@ -153,18 +153,18 @@
                     <br>
                     <table class="ordinary" border="0">
                         <tr>   
-                            <th> 채널 </th>
-                            <th width = "10px"></th>
-                            <th> 이름 </th>
-                            <th width = "10px"></th>
-                            <th> 평균 조회수 </th>
+                            <th width = "200px"> 채널 </th>
+                            <th width = "30px"></th>
+                            <th width = "200px"> 이름 </th>
+                            <th width = "30px"></th>
+                            <th width = "200px"> 평균 조회수 </th>
                         </tr>
                         <tr th:each = "ordin,i : ${general}">
-                            <td><a th:href="@{/detailPage(ch_url=${ordin.ch_url})}"><img th:id = "${i.index}" src="" alt=""></a></td>
+                            <td align="center"><a th:href="@{/detailPage(ch_url=${ordin.ch_url})}"><img th:id = "${i.index}" src="" alt=""></a></td>
                             <td></td>
                             <td align="center"><a th:href="@{/detailPage(ch_url=${ordin.ch_url})}"><span th:text = "${ordin.ch_name}" > 이름 </span></a></td>
                             <td></td>
-                            <td align="center"> <span th:text = "${ordin.adavgview}" > 평균 조회수 </span></td>
+                            <td align="center"> <span th:text = "${#numbers.formatInteger(ordin.adavgview,0,'COMMA')}" > 평균 조회수 </span></td>
                             <script>
                                 id = '#';
                                 id = id + i;
@@ -179,18 +179,18 @@
                     <br>
                     <table class="recommend" border="0">
                         <tr>
-                            <th></th>
-                            <th width = "10px"></th>
-                            <th> 이름 </th>
-                            <th width = "10px"></th>
-                            <th> 유사도 </th>
+                            <th width = "200px"> 채널 </th>
+                            <th width = "30px"></th>
+                            <th width = "200px"> 이름 </th>
+                            <th width = "30px"></th>
+                            <th width = "200px"> 유사도 </th>
                         </tr>
                         <tr th:each="recom,i : ${list}">
-                            <td><a th:href="@{/detailPage(ch_url=${recom.ch_url})}"><img th:id = "${i.index}" name="secret" src="" alt=""></a></td>
+                            <td align="center"><a th:href="@{/detailPage(ch_url=${recom.ch_url})}"><img th:id = "${i.index}" name="secret" src="" alt=""></a></td>
                             <td></td>
                             <td align="center"><a th:href="@{/detailPage(ch_url=${recom.ch_url})}"><span th:text="${recom.ch_name}"> 채널 이름 </span></a></td>
                             <td></td>
-                            <td align="center"><span th:text="${recom.similarity}"> 유사도 </span></td>
+                            <td align="center"><strong><span th:text="${#numbers.formatDecimal(recom.similarity,2,2)}"></span>%</strong></td>
                         </tr>
                     </table>
                     <br>
