광고동영상 상세보기

--- a/src/main/resources/templates/DetailADvideoPage.html
+++ b/src/main/resources/templates/DetailADvideoPage.html
@@ -109,12 +109,20 @@
       }
   
     /* footer style */
+
+    #graph{
+      vertical-align : middle;
+    }
   </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 <script th:inline = "javascript">
     /*
       <![CDATA[*/
         let word = /*[[${wordcloud}]]*/ 'default';
+        let list = /*[[${list}]]*/ 'default';
+        var korean = 1-list[0].foreign;
+        var foreign = list[0].foreign;
         const word_list = word.split(' ');
         console.log(word_list);
       /*]]>
@@ -168,9 +176,67 @@
         <!---- 내용 ---->
         <td class="content" style="width:755px" align="center"  valign=top>
           <br>
-          <table align=center valign=top border="0">
+          <br>
+          <br>
+          <table align=center border="0">
               <tr>
-                  <td>
+                  <td id="graph">
+                    <div>
+                      <canvas id="myChart"></canvas>
+                    </div>
+                    <script type="text/javascript">
+                      var context = document
+                          .getElementById('myChart')
+                          .getContext('2d');
+                      var myChart = new Chart(context, {
+                          type: 'pie', // 차트의 형태
+                          data: { // 차트에 들어갈 데이터
+                              labels: [
+                                  //x 축
+                                  '한국인','외국인'
+                              ],
+                              datasets: [
+                                  { //데이터
+                                      label: 'test1', //차트 제목
+                                      fill: false, // line 형태일 때, 선 안쪽을 채우는지 안채우는지
+                                      data: [
+                                          korean,foreign //x축 label에 대응되는 데이터 값
+                                      ],
+                                      backgroundColor: [
+                                          //색상
+                                          'rgba(255, 99, 132, 0.2)',
+                                          'rgba(54, 162, 235, 0.2)'/*,                                          
+                                          'rgba(255, 206, 86, 0.2)',
+                                          'rgba(75, 192, 192, 0.2)',
+                                          'rgba(153, 102, 255, 0.2)',
+                                          'rgba(255, 159, 64, 0.2)'*/
+                                      ],
+                                      borderColor: [
+                                          //경계선 색상
+                                          'rgba(255, 99, 132, 1)',
+                                          'rgba(54, 162, 235, 1)'/*,
+                                          'rgba(255, 206, 86, 1)',
+                                          'rgba(75, 192, 192, 1)',
+                                          'rgba(153, 102, 255, 1)',
+                                          'rgba(255, 159, 64, 1)'*/
+                                      ],
+                                      borderWidth: 1 //경계선 굵기
+                                  }
+                              ]
+                          },
+                          options: {
+                              scales: {
+                                  yAxes: [
+                                      {
+                                          ticks: {
+                                              beginAtZero: true
+                                          }
+                                      }
+                                  ]
+                              }
+                          }
+                      });
+                  </script>
                   </td>
               </tr>
           </table>
@@ -178,12 +244,14 @@
         </td>
         <!---- 내용 ---->
 
+
+
       </tr>
     </tbody>
   </table>
   <!---- main ----->
 
-  <br>
+    <br>
     <br>
     <br>
 
