--- a/src/main/resources/templates/servicePage.html
+++ b/src/main/resources/templates/servicePage.html
@@ -136,7 +136,7 @@
         <tbody>
             <tr>
                 <td align=center>
-                    <img src="https://i.ibb.co/X3tyHtK/1.png" alt="">
+                    <img src="https://i.ibb.co/wggj2PP/1.png" alt="">
                 </td>
             </tr>
             <tr>
