--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -125,24 +125,24 @@
     <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
         <tbody>
             <tr>
-                <td style="width:255px" valign=top bgcolor="#ececec"  class = 'category' >&nbsp;
+                <td style="width:255px" valign=top bgcolor="#ececec"  class = 'category' align="center">&nbsp;
                     <br>
-                    <p align=Center size=9><img src="https://i.ibb.co/f2ghtBm/Recommendation.png"></p>
+                    <p align=Center size=9><img src="https://i.ibb.co/f2ghtBm/Recommendation.png" ></p>
                     <br>
                     <br>
-                    <center>
-                      &nbsp;&nbsp;&nbsp;키워드를 입력해주세요
+                    <div>
+                      <h3>키워드를 입력해주세요</h3>
+                    </div>
+                    <br>
                       <form action="/recommend" method="POST" border="1">
-                        &nbsp;&nbsp;&nbsp;<input type="text" name = "keyword" placeholder="">
+                        <input type="text" name = "keyword" placeholder="" style="width:200px;height:30px;font-size:20px;"> 
                         <br>
                         <br>
-                        <center><input TYPE="IMAGE" src="https://i.ibb.co/pPxMtZj/recommendation-Button.png" 
+                        <input TYPE="IMAGE" src="https://i.ibb.co/pPxMtZj/recommendation-Button.png" 
                           onmouseover="this.src='https://i.ibb.co/6mW8dzq/recommendation-Button.png'" 
                           onmouseout="this.src='https://i.ibb.co/pPxMtZj/recommendation-Button.png'" 
                           name="submit" value="submit">
-                        <center/>
                       </form>
-                    </center>
                 </td>
                 <td class="content">
 
