--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -146,6 +146,12 @@
     border : none;
   }
 
+  input[type=checkbox] {
+
+    zoom: 1.65;
+
+    }
+
 </style>
 </head>
 <body>
@@ -174,48 +180,50 @@
         <form action="/filterPage">
           <!--카테고리 선택-->
           <br>
-          <h3><strong>&nbsp;&nbsp;[카테고리]</strong></h3>
+          <h3><strong>&nbsp;&nbsp;&nbsp;[카테고리]</strong></h3>
+          <br>
           <div>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="음악" onclick='checkOnlyOne(this)'>&nbsp;음악
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="음악" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">음악</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="노하우/스타일" onclick='checkOnlyOne(this)'>&nbsp;노하우/스타일
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="노하우/스타일" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">노하우/스타일</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="뉴스/정치" onclick='checkOnlyOne(this)'>&nbsp;뉴스/정치
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="뉴스/정치" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">뉴스/정치</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="코미디" onclick='checkOnlyOne(this)'>&nbsp;코미디
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="코미디" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">코미디</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="자동차" onclick='checkOnlyOne(this)'>&nbsp;자동차
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="자동차" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">자동차</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="인물/블로그" onclick='checkOnlyOne(this)'>&nbsp;인물/블로그
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="인물/블로그" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">인물/블로그</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="스포츠" onclick='checkOnlyOne(this)'>&nbsp;스포츠
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="스포츠" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">스포츠</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="엔터테이먼트" onclick='checkOnlyOne(this)'>&nbsp;엔터테이먼트
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="엔터테이먼트" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">엔터테이먼트</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="동물" onclick='checkOnlyOne(this)'>&nbsp;동물
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="동물" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">동물</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="여행/이벤트" onclick='checkOnlyOne(this)'>&nbsp;여행/이벤트
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="여행/이벤트" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">여행/이벤트</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="교육" onclick='checkOnlyOne(this)'>&nbsp;교육
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="교육" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">교육</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="영화/애니메이션" onclick='checkOnlyOne(this)'>&nbsp;영화/애니메이션
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="영화/애니메이션" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">영화/애니메이션</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="게임" onclick='checkOnlyOne(this)'>&nbsp;게임
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="category" value="게임" onclick='checkOnlyOne(this)'>&nbsp;<font size="5em">게임</font>
             <br>
           </div>
           <!--카테고리 선택-->
 
           <!-- 구독자 수 선택-->
           <br>
-          <h3><strong>&nbsp;&nbsp;[구독자]</strong></h3>
+          <h3><strong>&nbsp;&nbsp;&nbsp;[구독자]</strong></h3>
+          <br>
           <div>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000" onclick='checkOnlyOne1(this)'>&nbsp;10만 이하
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000" onclick='checkOnlyOne1(this)'>&nbsp;<font size="5em">10만 이하</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="1000000" onclick='checkOnlyOne1(this)'>&nbsp;10만 ~ 100만
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="1000000" onclick='checkOnlyOne1(this)'>&nbsp;<font size="5em">10만 ~ 100만</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="10000000" onclick='checkOnlyOne1(this)'>&nbsp;100만 ~ 1000만
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="10000000" onclick='checkOnlyOne1(this)'>&nbsp;<font size="5em">100만 ~ 1000만</font>
             <br>
-            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000000" onclick='checkOnlyOne1(this)'>&nbsp;1000만 이상
+            &nbsp;&nbsp;&nbsp;<input type="checkbox" name="sub" value="100000000" onclick='checkOnlyOne1(this)'>&nbsp;<font size="5em">1000만 이상</font>
           </div>
           <!-- 구독자 수 선택 -->
           <br>
