--- a/src/main/resources/templates/servicePage.html
+++ b/src/main/resources/templates/servicePage.html
@@ -117,46 +117,42 @@
     <br>
     <br>
     <br>
-
-    <!-- 대표 소개 -->
+    <!-- Main -->
     <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
         <tbody>
+            <!-- 대표 소개-->
             <tr>
                 <td align=center>
-                    <img src="https://i.ibb.co/3RsM2m0/image.png" alt="">
+                    <img src="https://i.ibb.co/KGC2Gd4/1.jpg" alt="">
                 </td>
             </tr>
+            <!-- 대표 소개-->
+
+            <!-- 분석 알고리즘 소개-->
+            <tr>
+                <td align=center>
+                    <img src="https://i.ibb.co/QC21mmC/2.jpg" alt="">
+                </td>
+            </tr>
+            <tr>
+                <td align=center>
+                    <img src="https://i.ibb.co/1TTnM3b/3.jpg" alt="">
+                </td>
+            </tr>
+            <tr>
+                <td align=center>
+                    <img src="https://i.ibb.co/qxB4hch/4.jpg" alt="">
+                </td>
+            </tr>
+            <tr>
+                <td align=center>
+                    <img src="https://i.ibb.co/88tRDPk/5.jpg" alt="">
+                </td>
+            </tr>
+            <!-- 분석 알고리즘 소개-->
         </tbody>
     </table>
-    <!-- 대표 소개 -->
-
-
-    <!-- 분석 알고리즘 -->
-    <table id = "table" border="0" cellpadding="1" cellspacing="1" style="height:600px; width:1024px" align=center>
-        <tbody>
-            <tr>
-                <td align=center>
-                    <img src="https://i.ibb.co/wggj2PP/1.png" alt="">
-                </td>
-            </tr>
-            <tr>
-                <td align=center>
-                    <img src="https://i.ibb.co/jWZpTDk/2.png" alt="">
-                </td>
-            </tr>
-            <tr>
-                <td align=center>
-                    <img src="https://i.ibb.co/ZJQsWSX/3.png" alt="">
-                </td>
-            </tr>
-            <tr>
-                <td align=center>
-                    <img src="https://i.ibb.co/p40FgGh/4.png" alt="">
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <!-- 분석 알고리즘 -->
+    <!-- Main -->
 
     <br>
     <br>
